Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6571

Segmentation fault in QDBusPendingReplyData::setMetaTypes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 4.6.1, 4.7.1
    • 4.5.3
    • D-Bus
    • None
    • 970f19bdb55cd559e9ef97228d30fd52b20e39cb

    Description

      Example based on KDE:

      QDBusReply< QList <QDBusObjectPath> > deviceList = iface.GetDevices();
      if (deviceList.isValid())
      .......

      Iface is generated by qdbusxml2cpp:
      inline QDBusPendingReply<QList<QDBusObjectPath> > GetDevices()

      { QList<QVariant> argumentList; return asyncCallWithArgumentList(QLatin1String("GetDevices"), argumentList); }

      If there is a dbus error, deviceList.isValid() is false. If the program can't connect to dbus, the program segfaults.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tmacieir Thiago Macieira (closed Nokia identity) (Inactive)
            mkogler Martin Koegler
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes