Fix crash in QDBusPendingReply/QDBusReply in case of unconnected calls.

If we made calls on a QDBusConnection that isn't connected, the d
pointer is 0. Ensure we don't crash.

Task-number: QTBUG-6571
Reviewed-by: Bradley T. Hughes